# KishaanSaathi

./: .env  .env.example  .gitignore  QUICK_REFERENCE_CHANGES.md  README.md  agro_service.py  api_logging.py  database.py  db_logging.py  debug_output.txt  diagnose.py  env.example  health_score.py  imputation.py  logger_config.py  main.py  migrate_csv_to_postgres.py  package-lock.json  package.json  pyproject.toml  requirements.txt  sahil_output.txt  sahil_result.txt  scratch_check_rows.py  scratch_cols.py  scratch_test_cache.py  scratch_test_result.txt  scratch_update_constraint.py  test_agra_features.py  test_split_models.py  vite.config.ts
Dataset/: KrishiTwin_Final_Engineered.csv
Encoder_and_model/: KharifVsRabi.ipynb  crop_encoder.pkl  kharif_feature_list.pkl  krishi_twin_xgb_model_complete.pkl  state_encoder.pkl
Frontend/: index.html  package-lock.json  package.json  vite.config.ts
NoteBook/: test_production_model.py
chatbot/: Integrated_chatbot.ipynb  agent.py  context_builder.py  db.py  graph.py  memory.py  models_loader.py  tools.py  weather_api_test.ipynb  weather_llm_test.ipynb
data/: mandi_master.json
docs/: IMPLEMENTATION_CHECKLIST.md  LOGGING_GUIDE.md  README_LOGGING.md  deployment_report.md
krishisarthi-api/: agra_output.txt  env.example  logger_config.py  notebook_config.py  requirements.txt  scratch_agra.py  scratch_cols.json  scratch_drop_table.py  scratch_fetch.json  scratch_fetch.py  scratch_find_constraint.py  scratch_kill.py  scratch_test_cropswap.py  test_predict.py  test_script.py
krishisarthi_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+116 files in other folders)
