[project]
name = "krishisarthi-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "asyncpg==0.29.0",
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "joblib==1.4.2",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "pydantic==2.7.1",
    "python-dotenv==1.0.1",
    "scikit-learn>=1.5.2",
    "uvicorn[standard]==0.30.1",
    "xgboost==2.0.3",
]

[dependency-groups]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
]
